app/kubernetes/deployment.yaml
# ~/testing-Project/app/kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test-app
spec:
  replicas: 3 # Deploy 3 replicas for high availability
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: <YOUR_ECR_URI_HERE>:<IMAGE_TAG> # PLACEHOLDER - This will be replaced by the pipeline
        ports:
        - containerPort: 8080
